--- a/README
+++ b/README
@@ -1,9 +1,9 @@
-	= ZeRoN_WoWCMS Project -- General information =
+	= ZeRoN_WoW Project -- General information =
 
 	Copyright (C) ZeRoN_WoWCMS (http://zeron-wow.dyndns.org/)
-	Copyright (C) Strawberry   (http://zeron-wow.dyndns.org/)
+	Copyright (C) ZeRoN_WoW   (http://zeron-wow.dyndns.org/)
 
-	AquaFlame Project is free website; you can redistribute it and/or modify
+	ZeRoN_WoWCMS Project is free website; you can redistribute it and/or modify
 	it under the terms of the GNU General Public License as published by
 	the Free Software Foundation; either version 2 of the License, or
 	(at your option) any later version.
@@ -17,23 +17,23 @@
 	along with this website; if not, write to the Free Software
 	Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-	AquaFlame is a World of Warcraft Website.
+	ZeRoN_WoW is a World of Warcraft Website.
 
-	For further information on the AquaFlame project, please visit the
+	For further information on the ZeRoN_WoW project, please visit the
 	project website at http://zeron-wow.dyndns.org/
 
 	SQL files to create the database can be found in the sql directory. Files
 	to update your database from an older revision/version can be found in the
 	sql/updates directory.
 
-	See http://zeron-wow.dyndns.org/board/index.php?/topic/5-guide-quick-guide-on-wowfailurecms/ for installation instructions on Windows.
+	See http://zeron-wow.dyndns.org/ for installation instructions on Windows.
 	This is an apache Working Website, also works on Linux.
 
 	Our Bug Tracker is located here.
-	http://zeron-wow.dyndns.org/board/index.php?/forum/30-wowfailurecms-support/
+	http://zeron-wow.dyndns.org/
 	TODO LIST:
 
-	= AquaFlame Project -- What has to be Done?! =
+	= ZeRoN_WoW Project -- What has to be Done?! =
 
 	1a) Make a Donation Panel.
 	1b) Make the following: Character Transfer, Name Change, Faction Change, Appearance Change, Race Change.
@@ -56,7 +56,7 @@
 	   (Work has Started.)
 
 	Information about the Footer.
-	1) Do not Change the Powered by ZeRoN_WoWCMS 
+	1) Do not Change the Powered by ZeRoN_WoW
 	(It's against the Rules of the GNU of our Work)
 	2) You can change the: Copyright 2011 - 2012 YOURNAME
 	3) You MUST not change the Blizzard Copyrights you can get Sued.
